# dRICH_prototype_analysis

./: README.md  setenv.sh  toDo.txt
sw/: CMakeLists.txt  CMakeLists_std.txt  CMakeLists_test.txt
sw/converter/: compile.sh  dRICH_GEM_integration.C  main_test.C
sw/lib/: .correction.cxx.swp  .getChannel.cxx.swp  .integrate.cxx.swp  .readData.cxx.swp  .selection.cxx.swp  MAPMTposition.cxx  MAPMTposition.h  asClass_definition.h  averaging.cxx  bck_integrate.cxx  computing.cxx  computing.h  correction.cxx  correction.h  dRICH.C  dRICH.cxx  dRICH.h  definition.h  drawing.cxx  drawing.h  event.cxx  event.h  eventDisplay.h  fillMAPS.cxx  fillMAPS.h  getChannel.cxx  getChannel.h  handleFile.cxx  handleFile.h  hitReco.h  integrate.C  integrate.cxx  integrate.h  integrate_old.cxx  new_computing.cxx  new_correction.cxx  new_drawing.cxx  new_eventDisplay.cxx  new_selection.cxx  old_computing.cxx  (+19 more)
sw/map/: CERN2_time_calib_MAPMT.txt  CERN3_time_calib_MAPMT.txt  CERN_time_calib_MAPMT.txt  DelayReferenceFile.csv  DelayReferenceFile_all.csv  FE_time_calib_MAPMT.txt  MAPMT.map  MAPMT_setup.map  MAPMT_setup2021.map  MAPMT_setup2021_parasitic.map  MAPMT_setup2022.map  MAPMT_setupSPS2022.map  MPPC_setup.map  MPPC_setup2021.map  SIMULATION_SETUP.map  bck_MAPMT_setup2022.map  old_MAPMT_setup2021.map  old_time_calib_MAPMT.txt  run_number.map  setup_explanation  time_calib_MAPMT.txt
sw/plugin/: .dRICH_GEM_integration.cxx.swp  .dRICH_reco.cxx.swp  .test_analysis.cxx.swp  analysis.cxx  dRICH_GEM_integration.C  dRICH_GEM_integration.cxx  dRICH_reco.cxx  event.cxx  main_test.C  monitor.cxx  out.root  simulation_reco.cxx  test.sh  test_analysis.cxx
